@@ -18,11 +18,11 @@ class EnvironmentTest extends MT\TestCase {
   function testEnvironment() {
     Assert::same("cli", MT\Environment::getMode());
     Assert::true(MT\Environment::isSetUp());
-    Assert::same(2, MT\Environment::$taskCount);
+    Assert::same(2, MT\Environment::getCounter());
     MT\Environment::incCounter();
-    Assert::same(4, MT\Environment::$taskCount);
+    Assert::same(4, MT\Environment::getCounter());
     MT\Environment::resetCounter();
-    Assert::same(0, MT\Environment::$taskCount);
+    Assert::same(0, MT\Environment::getCounter());
   }
 }
 
